--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
- "token" : "tokenhere",
+ "token" : "MTQyODA2NDAxNzI3NjA4MDIzOQ.GI1Wc0.ma7x9L_Iph4suYKC7SfFvnJuQpVTMBcvSjIUIw",
  "prefix": "!",
- "admin": ["123"]
+ "admin": ["1435723535955005570"]
 }
